# PixelTracker

./: CMakeLists.txt  README.md  main.c
include/: structs.h
libs/: font.h  led_matrix.c  led_matrix.h  structs.h
